html and css for welcome page

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -7,8 +7,9 @@
     = stylesheet_link_tag "application"
     = javascript_include_tag "application"
   %body
-    %header
-      = render 'shared/header'
+    -unless @no_header
+      %header
+        = render 'shared/header'
     %section.content.clearfix
       = render 'shared/messages'
       = yield
