--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -11,5 +11,10 @@
  * file per style scope.
  *
  *= require_tree .
+ *= require_reset
  *= require_self
  */
+
+body {
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+}
