--- a/app/assets/stylesheets/welcome.sass
+++ b/app/assets/stylesheets/welcome.sass
@@ -37,7 +37,7 @@ nav
       border-bottom: 2px solid #FFF
       cursor: pointer
 
-.sign-up
+.sign-up-button
   border: 2px solid #FFF
   border-radius: 4px
   padding: 7px 24px 8px 24px
