--- a/app/views/ui/home.html.haml
+++ b/app/views/ui/home.html.haml
@@ -10,7 +10,7 @@
         %li
           %a Log In
         %li
-          %a.sign-up Sign Up
+          %a.sign-up-button Sign Up
     %h1.logo
     %form.search-bar
       %label{ for: "business" } Find
