Log in Page html and css

--- a/app/assets/stylesheets/log_in.sass
+++ b/app/assets/stylesheets/log_in.sass
@@ -1,2 +1,9 @@
 .log-in-q
   display: inline-block
+
+a.log-in-q
+  font-size: 14px
+  font-weight: 700
+  color: #0073bb
+  &:hover
+    text-decoration: underline
