create main header

--- a/app/assets/stylesheets/sign_up.sass
+++ b/app/assets/stylesheets/sign_up.sass
@@ -54,6 +54,8 @@ section.sign-up
         font-size: 14px
         margin-bottom: 9px
         padding: 5px 9px
+        &:focus
+          outline: none
       input[type="submit"]
         cursor: pointer
         padding: 12px 18px 13px
