--- a/app/views/shared/_header.html.haml
+++ b/app/views/shared/_header.html.haml
@@ -1,8 +1,12 @@
-%header
-  %i.logo
-  %form.search-bar
-    %label{ for: "business" } Find
-    %input{ type: "text", id: "business", placeholder: "burgers, barbers, spas, handymen..." }
-    %label{ for: "place" } Near
-    %input{ type: "text", id: "place", placeholder: "Toronto, ON" }
-    %input{type: "submit", value: "Search"}
+%ul
+  %li
+    %i.logo
+  %li
+    %form.search-bar
+      %label{ for: "business" } Find
+      %input{ type: "text", id: "business", placeholder: "burgers, barbers, spas, handymen..." }
+      %label{ for: "place" } Near
+      %input{ type: "text", id: "place", placeholder: "Toronto, ON" }
+      %input{type: "submit", value: "Search"}
+  %li
+    %a.sign-up-button Sign Up
