--- a/app/assets/stylesheets/welcome.sass
+++ b/app/assets/stylesheets/welcome.sass
@@ -18,7 +18,7 @@ h1.logo
   background-repeat: no-repeat
   margin: 50px auto 48px
 
-nav
+nav.welcome-nav
   height: 60px
   color: #FFF
   font-weight: 700
