--- a/app/views/ui/home.html.haml
+++ b/app/views/ui/home.html.haml
@@ -1,6 +1,6 @@
 %section.home_main(style="background-image: url('images/home/pasta.jpg')")
   %div
-    %nav
+    %nav.welcome-nav
       %ul.nav-left
         %li
           %a Write a Review
