--- a/app/assets/stylesheets/business_index.sass
+++ b/app/assets/stylesheets/business_index.sass
@@ -46,3 +46,29 @@ header
     font-weight: 700
     &:hover
       background-color: #a71c1c
+      color: #FFF
+nav.main-nav
+  background-color: #bd1f1f
+  text-align: center
+  ul
+    width: 940px
+    display: inline-block
+    li
+      float: left
+      line-height: 21px
+      display: block
+      padding: 3px 15px
+      font-weight: bold
+      font-size: 13px
+      color: #FFF
+      i
+        line-height: 14px
+      &.no-link:hover
+        background: none
+        cursor: auto
+      &:hover
+        background: rgba(51,51,51,0.3)
+        cursor: pointer
+      &:last-of-type
+        float: right
+        margin-right: 24px
