setup business list

--- a/app/assets/stylesheets/sign_up.sass
+++ b/app/assets/stylesheets/sign_up.sass
@@ -1,4 +1,4 @@
-header
+header.sign_up
   padding: 15px 0 
   background: #d32323 url("/images/general/header_stars.png") no-repeat center
   background-size: 1135px auto, 100%
