--- a/app/views/ui/business_index.html.haml
+++ b/app/views/ui/business_index.html.haml
@@ -1,18 +1,81 @@
-%nav.main-nav
+%div.location-wrapper
+  %div.location
+    %h1 Browsing Toronto, ON, Canada Businesses
+%main.business-list
   %ul
     %li
-      %a Restaurants
+      %div.title
+        %img.biz-img{ src: "images/businesses/under_the_table_restaurant.jpg" }
+        %div.title-details
+          %h2 1.
+          %a Under The Table Restaurant
+          %div.rating
+            %div.stars
+            %p 29 reviews
+          %div.price-category
+            %span $$
+            %a Caribbean
+            %span , 
+            %a Comfort Food
+            %span , 
+            %a Breakfast & Brunch
+      %div.address-info
+        %p Cabbagetown
+        %p 568 Parliament Street
+        %p Toronto, ON M4X 1P8
+        %p Canada
+        %p (647) 351-1533
+      %div.review
+        %img
+        %p While on a quick visit to Toronto, we wanted to patronize a breakfast place that offered a neighborhood atmosphere. If you're not familiar with the place (and are totally reliant on...
+        %a read more
     %li
-      %a Nightlife
+      %div.title
+        %img.biz-img{ src: "images/businesses/under_the_table_restaurant.jpg" }
+        %h2 2.
+        %a Under The Table Restaurant
+        %div.rating
+          %div.stars
+          %p 29 reviews
+        %div.price-category
+          %span $$
+          %a Caribbean
+          %span , 
+          %a Comfort Food
+          %span , 
+          %a Breakfast & Brunch
+      %div.address-info
+        %p Cabbagetown
+        %p 568 Parliament Street
+        %p Toronto, ON M4X 1P8
+        %p Canada
+        %p (647) 351-1533
+      %div.review
+        %img
+        %p While on a quick visit to Toronto, we wanted to patronize a breakfast place that offered a neighborhood atmosphere. If you're not familiar with the place (and are totally reliant on...
+        %a read more
     %li
-      %a Home Services
-    %li.no-link
-      %i .
-    %li
-      %a Write a Review
-    %li
-      %a Events
-    %li
-      %a Talk
-    %li
-      %a Log In
+      %div.title
+        %img.biz-img{ src: "images/businesses/under_the_table_restaurant.jpg" }
+        %h2 3.
+        %a Under The Table Restaurant
+        %div.rating
+          %div.stars
+          %p 29 reviews
+        %div.price-category
+          %span $$
+          %a Caribbean
+          %span , 
+          %a Comfort Food
+          %span , 
+          %a Breakfast & Brunch
+      %div.address-info
+        %p Cabbagetown
+        %p 568 Parliament Street
+        %p Toronto, ON M4X 1P8
+        %p Canada
+        %p (647) 351-1533
+      %div.review
+        %img
+        %p While on a quick visit to Toronto, we wanted to patronize a breakfast place that offered a neighborhood atmosphere. If you're not familiar with the place (and are totally reliant on...
+        %a read more
