--- a/app/assets/stylesheets/business_index.sass
+++ b/app/assets/stylesheets/business_index.sass
@@ -1,74 +1,41 @@
-header
+div.location-wrapper
+  padding: 30px 0
+  background: #f5f5f5
+  border-bottom: 1px solid #e6e6e6
+  width: 100%
+  min-width: 1020px
+  position: relative
+  text-align: center
+div.location
+  width: 960px
+  display: inline-block
+  text-align: left
+  h1
+    font-size: 21px
+    line-height: 1.28571em
+    font-weight: bold
+main.business-list
   text-align: center
   ul
-    display: inline-block
-  li
-    float: left
-    vertical-align: top
-    + li
-      padding-left: 15px
-  form.search-bar
-    height: 36px
-    line-height: 36px
-    font-size: 14px
-    width: 710px
-    label
-      width: 40px
-      color: #333
-    input[type=text]
-      &:first-of-type,
-      &:nth-of-type(2)
-        width: 274px
-    input[type=submit]
-      background-color: #bd1f1f
-      &:hover
-        background-color: #a71c1c
-  i.logo
-    background-image: url("/images/general/logo.png")
-    background-size: contain
-    width: 80px
-    height: 40px
-    background-repeat: no-repeat
-    margin: 0 auto
-    display: block
-    border: none
-    margin-top: -4px
-  .sign-up-button
-    display: block
-    line-height: 24px
-    padding: 6px 24px
-    margin: 0
-    vertical-align: top
-    color: #FFF
-    border: none
-    background-color: #bd1f1f
-    font-size: 14px
-    font-weight: 700
-    &:hover
-      background-color: #a71c1c
-      color: #FFF
-nav.main-nav
-  background-color: #bd1f1f
-  text-align: center
-  ul
-    width: 940px
+    padding-top: 15px
+    width: 960px
     display: inline-block
     li
-      float: left
-      line-height: 21px
-      display: block
-      padding: 3px 15px
-      font-weight: bold
-      font-size: 13px
-      color: #FFF
-      i
-        line-height: 14px
-      &.no-link:hover
-        background: none
-        cursor: auto
-      &:hover
-        background: rgba(51,51,51,0.3)
-        cursor: pointer
-      &:last-of-type
-        float: right
-        margin-right: 24px
+      text-align: left
+      padding: 18px 0 17px 0
+      border-bottom: 1px solid #e6e6e6
+      &:first-child
+        border-top: 1px solid #e6e6e6
+        padding-top: 17px
+      img.biz-img
+        height: 90px
+        width: 90px
+        vertical-align: top
+        border-radius: 4px
+        outline: none
+        display: inline-block
+      .title-details
+        padding-left: 5px
+        display: inline-block
+        h2
+          display: inline-block
