--- a/app/views/ui/business_index.html.haml
+++ b/app/views/ui/business_index.html.haml
@@ -10,7 +10,7 @@
           %h2 1.
           %a Under The Table Restaurant
           %div.rating
-            %div.stars
+            %div.stars.i-stars--regular-4
             %p 29 reviews
           %div.price-category
             %span $$
@@ -19,63 +19,86 @@
             %a Comfort Food
             %span , 
             %a Breakfast & Brunch
-      %div.address-info
-        %p Cabbagetown
-        %p 568 Parliament Street
-        %p Toronto, ON M4X 1P8
-        %p Canada
-        %p (647) 351-1533
+        %div.address-info
+          %p
+            Cabbagetown
+            %br
+            %br
+            568 Parliament Street
+            %br
+            Toronto, ON M4X 1P8
+            %br
+            Canada
+            %br
+            (647) 351-1533
       %div.review
-        %img
-        %p While on a quick visit to Toronto, we wanted to patronize a breakfast place that offered a neighborhood atmosphere. If you're not familiar with the place (and are totally reliant on...
-        %a read more
+        %img{ src: "images/general/user_60_square.png" }
+        %p 
+          While on a quick visit to Toronto, we wanted to patronize a breakfast place that offered a neighborhood atmosphere. If you're not familiar with the place (and are totally reliant on...
+          %a read more
     %li
       %div.title
         %img.biz-img{ src: "images/businesses/under_the_table_restaurant.jpg" }
-        %h2 2.
-        %a Under The Table Restaurant
-        %div.rating
-          %div.stars
-          %p 29 reviews
-        %div.price-category
-          %span $$
-          %a Caribbean
-          %span , 
-          %a Comfort Food
-          %span , 
-          %a Breakfast & Brunch
-      %div.address-info
-        %p Cabbagetown
-        %p 568 Parliament Street
-        %p Toronto, ON M4X 1P8
-        %p Canada
-        %p (647) 351-1533
+        %div.title-details
+          %h2 1.
+          %a Under The Table Restaurant
+          %div.rating
+            %div.stars.i-stars--regular-4
+            %p 29 reviews
+          %div.price-category
+            %span $$
+            %a Caribbean
+            %span , 
+            %a Comfort Food
+            %span , 
+            %a Breakfast & Brunch
+        %div.address-info
+          %p
+            Cabbagetown
+            %br
+            %br
+            568 Parliament Street
+            %br
+            Toronto, ON M4X 1P8
+            %br
+            Canada
+            %br
+            (647) 351-1533
       %div.review
-        %img
-        %p While on a quick visit to Toronto, we wanted to patronize a breakfast place that offered a neighborhood atmosphere. If you're not familiar with the place (and are totally reliant on...
-        %a read more
+        %img{ src: "images/general/user_60_square.png" }
+        %p 
+          While on a quick visit to Toronto, we wanted to patronize a breakfast place that offered a neighborhood atmosphere. If you're not familiar with the place (and are totally reliant on...
+          %a read more
     %li
       %div.title
         %img.biz-img{ src: "images/businesses/under_the_table_restaurant.jpg" }
-        %h2 3.
-        %a Under The Table Restaurant
-        %div.rating
-          %div.stars
-          %p 29 reviews
-        %div.price-category
-          %span $$
-          %a Caribbean
-          %span , 
-          %a Comfort Food
-          %span , 
-          %a Breakfast & Brunch
-      %div.address-info
-        %p Cabbagetown
-        %p 568 Parliament Street
-        %p Toronto, ON M4X 1P8
-        %p Canada
-        %p (647) 351-1533
+        %div.title-details
+          %h2 1.
+          %a Under The Table Restaurant
+          %div.rating
+            %div.stars.i-stars--regular-4
+            %p 29 reviews
+          %div.price-category
+            %span $$
+            %a Caribbean
+            %span , 
+            %a Comfort Food
+            %span , 
+            %a Breakfast & Brunch
+        %div.address-info
+          %p
+            Cabbagetown
+            %br
+            %br
+            568 Parliament Street
+            %br
+            Toronto, ON M4X 1P8
+            %br
+            Canada
+            %br
+            (647) 351-1533
       %div.review
-        %img
-        %p While on a quick visit to Toronto, we wanted to patronize a breakfast place that offered a neighborhood atmosphere. If you're not familiar with the place (and are totally reliant on...
-        %a read more
+        %img{ src: "images/general/user_60_square.png" }
+        %p 
+          While on a quick visit to Toronto, we wanted to patronize a breakfast place that offered a neighborhood atmosphere. If you're not familiar with the place (and are totally reliant on...
+          %a read more
