--- a/app/assets/stylesheets/business_index.sass
+++ b/app/assets/stylesheets/business_index.sass
@@ -67,13 +67,10 @@ main.business-list
           position: relative
           top: -4px
           padding-left: 4px
-      .stars
-        display: inline-block
-        background-image: url("/images/general/stars@2x.png")
-        background-size: 132px 560px
-        vertical-align: middle
       .rating p
         display: inline-block
+        padding-left: 3px
+        color: #666
       .address-info
         width: 20%
         float: right
