--- a/app/assets/stylesheets/business_show.sass
+++ b/app/assets/stylesheets/business_show.sass
@@ -1,10 +1,9 @@
 .biz-show
   margin: 20px auto
   width: 960px
-
-.show-title
   a
     color: #0073bb
+.show-title
   > h1
     font-size: 36px
     font-weight: bold
@@ -30,3 +29,65 @@
     font-size: 21px
     padding-bottom: 6px
     border-bottom: 1px solid #ddd
+  .user-review
+    width: 210px
+    padding: 0 15px
+    float: left
+    box-sizing: border-box
+    img
+      float: left
+    .user-review-info
+      float: left
+      padding: 10px 0 0 2px
+      a,
+      span
+        font-weight: bold
+      a
+        font-size: 14px
+      span
+        color: #666
+        font-size: 12px
+  .review-form
+    padding: 15px 0 20px 0
+    border-bottom: 1px solid #ccc
+    form
+      width: 750px
+      float: left
+      box-sizing: border-box
+      select
+        display: block
+        line-height: 30px
+        font-size: 14px
+        margin-bottom: 10px
+      textarea
+        border-radius: 4px
+        box-shadow: none
+        border: 1px solid #ccc
+        resize: none
+        height: 80px
+        width: 100%
+        font-size: 14px
+        font-family: inherit
+        padding: 8px
+        &:focus
+          outline: none
+  .review-list
+    > li
+      padding: 10px 0
+      border-bottom: 1px solid #ddd
+      &:after
+        clear: both
+        content: ""
+        display: table
+      .review-item
+        padding-top: 6px
+        float: right
+        width: 750px
+      .stars + p
+        display: inline-block
+        font-size: 14px
+        color: #666
+      p:last-of-type
+        padding-top: 10px
+        font-size: 14px
+        line-height: 18px
