--- a/app/assets/stylesheets/business_show.sass
+++ b/app/assets/stylesheets/business_show.sass
@@ -22,6 +22,8 @@
       top: -4px
       padding: 0 2px 0 6px
     padding-bottom: 20px
+  img
+    border-radius: 4px
 
 .reviews
   padding-top: 20px
@@ -71,6 +73,18 @@
         padding: 8px
         &:focus
           outline: none
+      input[type="submit"]
+        cursor: pointer
+        padding: 12px 18px 13px
+        margin-top: 12px
+        font-size: 16px
+        font-weight: 700
+        line-height: 1.3125em
+        color: #fff
+        border-color: #8d0005
+        box-shadow: 0 1px 1px rgba(0,0,0,0.3)
+        background-color: #d90007
+        background: linear-gradient(#d90007, #c91400)
   .review-list
     > li
       padding: 10px 0
