--- a/app/assets/stylesheets/business_show.sass
+++ b/app/assets/stylesheets/business_show.sass
@@ -4,26 +4,32 @@
   a
     color: #0073bb
 .show-title
-  > h1
-    font-size: 36px
-    font-weight: bold
-    line-height: 1.16667em
-    padding-bottom: 10px
-  .rating
-    p
-      display: inline-block
-      color: #666
-      padding-left: 2px
-      padding-bottom: 20px
-  .price-category
-    span:first-child:after
-      content: "."
-      position: relative
-      top: -4px
-      padding: 0 2px 0 6px
-    padding-bottom: 20px
   img
     border-radius: 4px
+    height: 120px
+    width: 120px
+    float: left
+  .show-details
+    float: left
+    padding-left: 20px
+    > h1
+      font-size: 36px
+      font-weight: bold
+      line-height: 1.16667em
+      padding-bottom: 10px
+    .rating
+      p
+        display: inline-block
+        color: #666
+        padding-left: 2px
+        padding-bottom: 20px
+    .price-category
+      span:first-child:after
+        content: "."
+        position: relative
+        top: -4px
+        padding: 0 2px 0 6px
+      padding-bottom: 20px
 
 .reviews
   padding-top: 20px
