--- a/app/views/ui/business_show.html.haml
+++ b/app/views/ui/business_show.html.haml
@@ -1,13 +1,14 @@
 %div.biz-show
-  %div.show-title
-    %h1 Tacos 101
-    %div.rating
-      %div.stars.i-stars--large-4
-      %p 144 reviews
-    %div.price-category
-      %span $
-      %a Mexican
+  %div.show-title.clearfix
     %img{src: "images/businesses/rasa.jpg"}
+    .show-details
+      %h1 Tacos 101
+      %div.rating
+        %div.stars.i-stars--large-4
+        %p 144 reviews
+      %div.price-category
+        %span $
+        %a Mexican
   %div.reviews
     %h2
       Reviews for Tacos 101
