--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -36,3 +36,8 @@ footer {
   font-size: 14px;
   padding: 15px 0 0 15px;
 }
+
+a:-webkit-any-link {
+  color: inherit;
+  text-decoration: none;
+};
