--- a/app/views/users/new.html.haml
+++ b/app/views/users/new.html.haml
@@ -5,11 +5,11 @@
     %div
       %h1 Sign Up for Yelp
       %h3 Connect with great local businesses
-      %form
-        %input{type: "text", placeholder:"First Name", class: "half"}
-        %input{type: "text", placeholder:"Last Name", class: "half"}
-        %input{type: "text", placeholder:"Email"}
-        %input{type: "text", placeholder:"Password"}
-        %input{type: "submit", value: "Sign Up"}
+      = form_for @user do |f|
+        = f.text_field :first_name, placeholder: "First Name", class: "half"
+        = f.text_field :last_name, placeholder: "Last Name", class: "half"
+        = f.email_field :email, placeholder: "Email"
+        = f.password_field :password, placeholder: "Password"
+        = f.submit value: "Sign Up"
   %aside
     %img{ src: "images/general/signup_illustration.png"}
