--- a/app/assets/stylesheets/header.sass
+++ b/app/assets/stylesheets/header.sass
@@ -1,3 +1,16 @@
+header.sign-up
+  padding: 15px 0 
+  background: #d32323 url("/images/general/header_stars.png") no-repeat center
+  background-size: 1135px auto, 100%
+  a
+    background-image: url("/images/general/logo.png")
+    background-size: contain
+    width: 80px
+    height: 40px
+    background-repeat: no-repeat
+    margin: 0 auto
+    display: block
+    border: none
 div.banner
   padding: 15px 0 
   text-align: center
@@ -26,7 +39,7 @@ div.banner
       background-color: #bd1f1f
       &:hover
         background-color: #a71c1c
-  i.logo
+  a.logo
     background-image: url("/images/general/logo.png")
     background-size: contain
     width: 80px
