start business testing, adjust business index page

--- a/app/assets/stylesheets/general.sass
+++ b/app/assets/stylesheets/general.sass
@@ -1,3 +1,6 @@
+body
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif
+
 .stars
   display: inline-block
   background-image: url("/images/general/stars@2x.png")
