--- a/app/assets/stylesheets/header.sass
+++ b/app/assets/stylesheets/header.sass
@@ -63,6 +63,32 @@ div.banner
     &:hover
       background-color: #a71c1c
       color: #FFF
+  .user-profile-button
+    position: relative
+    text-align: right
+    display: block
+    line-height: 24px
+    padding: 6px 10px 6px 46px
+    margin: 0
+    vertical-align: top
+    color: #FFF
+    border-radius: 4px
+    border: none
+    background-color: #bd1f1f
+    font-size: 14px
+    font-weight: 700
+    &:hover
+      background-color: #a71c1c
+      color: #FFF
+    .profile-button-logo
+      background-image: url("/images/general/user_medium_square.png")
+      background-size: contain
+      height: 36px
+      width: 36px
+      position: absolute
+      left: 0
+      top: 0
+      border-radius: 4px 0 0 4px
 nav.main-nav
   background-color: #bd1f1f
   text-align: center
