--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -10,11 +10,7 @@
  * defined in the other CSS/SCSS files in this directory. It is generally better to create a new
  * file per style scope.
  *
+ *= require reset
  *= require_tree .
- *= require_reset
  *= require_self
  */
-
-body {
-  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-}
