create business registration form

--- a/app/views/pages/home.html.haml
+++ b/app/views/pages/home.html.haml
@@ -5,7 +5,7 @@
         %li
           %a Write a Review
         %li
-          = link_to "Find a Business", business_index_path
+          = link_to "Find a Business", businesses_path
       %ul.nav-right
         - if logged_in?
           %li
