--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -4,67 +4,30 @@
     .user-profile-header.clearfix
       %img{src: "/images/general/user_large_square.png"}
       .user-profile-info
-        %h1= @user.full_name
+        %h1= @user.display_name
         %p
-          %strong 349
+          %strong= current_user.reviews.count
           Reviews
     .user-profile-reviews
       %h2 Reviews
       %ul
-        %li
-          .review-business.clearfix
-            %img.biz-img{src: "/images/businesses/rasa.jpg"}
-            .review-business-info
-              %h4
-                %a Miraj Hammam Spa by Caudalie
-              .price-category
-                %span $$$$
-                %a Day Spas
-              %p
-                188 University Avenue
-                %br
-                Toronto, ON  M5H 0A3
-                %br
-                Canada
-          .review-item
-            .stars.i-stars--regular-3
-            %p 11/8/2007
-            %p.content My bf and I always pass by this place when we take the street car and I've always noticed just how busy the spot was. I finally convinced my bf that we should try the spot out this past Monday and we surely didn't regret the visit! Everything was rather delicious and we were pleased to have our tacos packed and loaded with meat/fish/veggies - we got one of each taco, a bag of chips and guac, and to drink my bf got a Jarritos and I got a hibiscus drink! In order of what stood out as the most delicious taco is as followed: the cactus (we actually didn't consider ordering this at first but was wowed by the flavors!), fish (was crisp and so good!) and carnitas (a classic must have) - top off the tacos with your choice of their hot sauce and bam - you've got a mouth watering taco!
-        %li
-          .review-business.clearfix
-            %img.biz-img{src: "/images/businesses/rasa.jpg"}
-            .review-business-info
-              %h4
-                %a Miraj Hammam Spa by Caudalie
-              .price-category
-                %span $$$$
-                %a Day Spas
-              %p
-                188 University Avenue
-                %br
-                Toronto, ON  M5H 0A3
-                %br
-                Canada
-          .review-item
-            .stars.i-stars--regular-3
-            %p 11/8/2007
-            %p.content My bf and I always pass by this place when we take the street car and I've always noticed just how busy the spot was. I finally convinced my bf that we should try the spot out this past Monday and we surely didn't regret the visit! Everything was rather delicious and we were pleased to have our tacos packed and loaded with meat/fish/veggies - we got one of each taco, a bag of chips and guac, and to drink my bf got a Jarritos and I got a hibiscus drink! In order of what stood out as the most delicious taco is as followed: the cactus (we actually didn't consider ordering this at first but was wowed by the flavors!), fish (was crisp and so good!) and carnitas (a classic must have) - top off the tacos with your choice of their hot sauce and bam - you've got a mouth watering taco!
-        %li
-          .review-business.clearfix
-            %img.biz-img{src: "/images/businesses/rasa.jpg"}
-            .review-business-info
-              %h4
-                %a Miraj Hammam Spa by Caudalie
-              .price-category
-                %span $$$$
-                %a Day Spas
-              %p
-                188 University Avenue
-                %br
-                Toronto, ON  M5H 0A3
-                %br
-                Canada
-          .review-item
-            .stars.i-stars--regular-3
-            %p 11/8/2007
-            %p.content My bf and I always pass by this place when we take the street car and I've always noticed just how busy the spot was. I finally convinced my bf that we should try the spot out this past Monday and we surely didn't regret the visit! Everything was rather delicious and we were pleased to have our tacos packed and loaded with meat/fish/veggies - we got one of each taco, a bag of chips and guac, and to drink my bf got a Jarritos and I got a hibiscus drink! In order of what stood out as the most delicious taco is as followed: the cactus (we actually didn't consider ordering this at first but was wowed by the flavors!), fish (was crisp and so good!) and carnitas (a classic must have) - top off the tacos with your choice of their hot sauce and bam - you've got a mouth watering taco!
+        - @user.reviews.each do |review|
+          %li
+            .review-business.clearfix
+              %img.biz-img{src: "/images/businesses/#{review.business.cover_image}.jpg"}
+              .review-business-info
+                %h4
+                  = link_to review.business.name, business_path(review.business.id)
+                .price-category
+                  %span= "$" * review.business.price_range
+                  %a Day Spas
+                %p
+                  review.business.street_address
+                  %br
+                  = "Toronto, ON  #{review.business.postal_code}"
+                  %br
+                  Canada
+            .review-item
+              .stars{ class: "i-stars--regular-#{review.star_rating}" }
+              %p= review.date
+              %p.content= review.content
