--- a/app/views/shared/_messages.html.haml
+++ b/app/views/shared/_messages.html.haml
@@ -1,3 +1,4 @@
 - flash.each do |name, msg|
   %div(class="alert alert-#{name}")
+    %a.close &#215;
     = content_tag :div, msg, :id => "flash_#{name}" if msg.is_a?(String)
